--- a/Instagram/Base.lproj/Main.storyboard
+++ b/Instagram/Base.lproj/Main.storyboard
@@ -120,6 +120,10 @@
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="zop-kL-eEu">
                                 <rect key="frame" x="20" y="20" width="560" height="580"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="w95-dT-dwi" id="Leh-PE-stY"/>
+                                    <outlet property="delegate" destination="w95-dT-dwi" id="fzY-eN-Aq0"/>
+                                </connections>
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -130,6 +134,9 @@
                             <constraint firstItem="ReI-DJ-EYk" firstAttribute="top" secondItem="zop-kL-eEu" secondAttribute="bottom" id="wrK-9V-WBk"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="tableView" destination="zop-kL-eEu" id="3sE-fM-s02"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="7de-4Y-o70" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
