--- a/Instagram/Base.lproj/Main.storyboard
+++ b/Instagram/Base.lproj/Main.storyboard
@@ -324,7 +324,68 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ZI2-bN-1P7" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-294" y="2490"/>
+            <point key="canvasLocation" x="-278" y="2554"/>
+        </scene>
+        <!--Comment View Controller-->
+        <scene sceneID="V06-Bk-7B8">
+            <objects>
+                <viewController storyboardIdentifier="Comment" id="FiX-vb-fj8" customClass="CommentViewController" customModule="Instagram" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="bVA-va-LX0"/>
+                        <viewControllerLayoutGuide type="bottom" id="YrM-2q-12H"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="eAI-uy-OSd">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pZj-Zw-cbg">
+                                <rect key="frame" x="150" y="190" width="300" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="300" id="12z-vf-ysB"/>
+                                </constraints>
+                                <state key="normal" title="追加" backgroundImage="btn"/>
+                                <connections>
+                                    <action selector="handleAddButton:" destination="FiX-vb-fj8" eventType="touchUpInside" id="0ZJ-u4-Zar"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="H10-wU-yuh">
+                                <rect key="frame" x="150" y="240" width="300" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="300" id="OEC-aL-UpX"/>
+                                </constraints>
+                                <state key="normal" title="キャンセル" backgroundImage="btn"/>
+                                <connections>
+                                    <action selector="handleCancelButton:" destination="FiX-vb-fj8" eventType="touchUpInside" id="y1g-s1-fMi"/>
+                                </connections>
+                            </button>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="41J-z1-18u">
+                                <rect key="frame" x="150" y="30" width="300" height="150"/>
+                                <color key="backgroundColor" red="0.94675092713787079" green="0.94675092713787079" blue="0.94675092713787079" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="150" id="PXf-B2-V3q"/>
+                                    <constraint firstAttribute="width" constant="300" id="vQ5-rz-hfk"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="H10-wU-yuh" firstAttribute="top" secondItem="pZj-Zw-cbg" secondAttribute="bottom" constant="10" id="0K9-cz-aXg"/>
+                            <constraint firstItem="pZj-Zw-cbg" firstAttribute="centerX" secondItem="eAI-uy-OSd" secondAttribute="centerX" id="Geq-aT-l9F"/>
+                            <constraint firstItem="pZj-Zw-cbg" firstAttribute="top" secondItem="41J-z1-18u" secondAttribute="bottom" constant="10" id="efW-Rf-nNu"/>
+                            <constraint firstItem="41J-z1-18u" firstAttribute="top" secondItem="bVA-va-LX0" secondAttribute="bottom" constant="10" id="ksF-vc-6Eg"/>
+                            <constraint firstItem="H10-wU-yuh" firstAttribute="centerX" secondItem="eAI-uy-OSd" secondAttribute="centerX" id="qMj-Kz-Dsv"/>
+                            <constraint firstItem="41J-z1-18u" firstAttribute="centerX" secondItem="eAI-uy-OSd" secondAttribute="centerX" id="qlf-WG-KRv"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="commentText" destination="41J-z1-18u" id="Nfm-tY-F4t"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="t0n-h3-jCx" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-298" y="2927"/>
         </scene>
     </scenes>
     <resources>
