--- a/Instagram/PostTableViewCell.xib
+++ b/Instagram/PostTableViewCell.xib
@@ -9,11 +9,11 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="609" id="KGk-i7-Jjw" customClass="PostTableViewCell" customModule="Instagram" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="479" height="609"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="653" id="KGk-i7-Jjw" customClass="PostTableViewCell" customModule="Instagram" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="479" height="653"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="479" height="608.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="479" height="652.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="KBc-Mk-AJ6">
@@ -22,6 +22,27 @@
                             <constraint firstAttribute="width" secondItem="KBc-Mk-AJ6" secondAttribute="height" multiplier="1:1" id="KzZ-GT-MWv"/>
                         </constraints>
                     </imageView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Mk1-XW-MOw">
+                        <rect key="frame" x="68" y="500" width="40" height="21"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="40" id="ObP-yf-t0M"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="H5e-qQ-Fuz">
+                        <rect key="frame" x="118" y="500" width="343" height="21"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LBC-sX-Cxv">
+                        <rect key="frame" x="18" y="561" width="443" height="20.5"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Lec-pP-T0K">
                         <rect key="frame" x="18" y="491" width="40" height="40"/>
                         <constraints>
@@ -30,51 +51,52 @@
                         </constraints>
                         <state key="normal" title="Button" image="like_none"/>
                     </button>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Mk1-XW-MOw">
-                        <rect key="frame" x="68" y="500.5" width="40" height="21"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="H4F-iI-n48">
+                        <rect key="frame" x="18" y="591.5" width="443" height="43"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9a9-r1-IeV">
+                        <rect key="frame" x="68" y="526" width="112" height="30"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="40" id="ObP-yf-t0M"/>
+                            <constraint firstAttribute="width" constant="112" id="BRK-Hn-ScV"/>
                         </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="H5e-qQ-Fuz">
-                        <rect key="frame" x="118" y="500" width="343" height="21"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LBC-sX-Cxv">
-                        <rect key="frame" x="18" y="541" width="42" height="21"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
+                        <state key="normal" title="コメントを追加"/>
+                    </button>
                 </subviews>
                 <constraints>
                     <constraint firstItem="Lec-pP-T0K" firstAttribute="top" secondItem="KBc-Mk-AJ6" secondAttribute="bottom" constant="10" id="0Hc-Iq-3bm"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="H4F-iI-n48" secondAttribute="trailing" constant="10" id="4du-oF-nWp"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="H4F-iI-n48" secondAttribute="bottom" constant="10" id="7WO-oX-Hzs"/>
                     <constraint firstAttribute="trailingMargin" secondItem="H5e-qQ-Fuz" secondAttribute="trailing" constant="10" id="84q-ko-kWq"/>
                     <constraint firstItem="Mk1-XW-MOw" firstAttribute="leading" secondItem="Lec-pP-T0K" secondAttribute="trailing" constant="10" id="8In-Ub-bCh"/>
-                    <constraint firstItem="H5e-qQ-Fuz" firstAttribute="leading" secondItem="Mk1-XW-MOw" secondAttribute="trailing" constant="10" id="Dcl-yW-ceP"/>
+                    <constraint firstItem="H5e-qQ-Fuz" firstAttribute="centerY" secondItem="Mk1-XW-MOw" secondAttribute="centerY" id="CBM-3o-EB1"/>
                     <constraint firstItem="Lec-pP-T0K" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="10" id="E1E-BQ-cbD"/>
-                    <constraint firstItem="H5e-qQ-Fuz" firstAttribute="centerY" secondItem="Lec-pP-T0K" secondAttribute="centerY" id="RiW-Yz-NNw"/>
+                    <constraint firstItem="H4F-iI-n48" firstAttribute="top" secondItem="LBC-sX-Cxv" secondAttribute="bottom" constant="10" id="IDc-bw-nlw"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="LBC-sX-Cxv" secondAttribute="trailing" constant="10" id="IwB-89-X4P"/>
                     <constraint firstItem="KBc-Mk-AJ6" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="SV6-bX-Ut3"/>
                     <constraint firstItem="Mk1-XW-MOw" firstAttribute="centerY" secondItem="Lec-pP-T0K" secondAttribute="centerY" id="WE7-Xh-tnE"/>
+                    <constraint firstItem="H5e-qQ-Fuz" firstAttribute="leading" secondItem="Mk1-XW-MOw" secondAttribute="trailing" constant="10" id="ZaZ-Jz-OFV"/>
                     <constraint firstItem="KBc-Mk-AJ6" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="10" id="jg5-0C-A7F"/>
-                    <constraint firstItem="LBC-sX-Cxv" firstAttribute="top" secondItem="Lec-pP-T0K" secondAttribute="bottom" constant="10" id="lkW-T0-chX"/>
+                    <constraint firstItem="LBC-sX-Cxv" firstAttribute="top" secondItem="Lec-pP-T0K" secondAttribute="bottom" priority="900" constant="30" id="lkW-T0-chX"/>
                     <constraint firstItem="LBC-sX-Cxv" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="10" id="mhg-BZ-Usi"/>
                     <constraint firstItem="KBc-Mk-AJ6" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="mvh-0m-n9J"/>
+                    <constraint firstItem="9a9-r1-IeV" firstAttribute="leading" secondItem="Lec-pP-T0K" secondAttribute="trailing" constant="10" id="qtu-ft-LPq"/>
+                    <constraint firstItem="9a9-r1-IeV" firstAttribute="top" secondItem="H5e-qQ-Fuz" secondAttribute="bottom" constant="5" id="w6a-5V-G3j"/>
+                    <constraint firstItem="H4F-iI-n48" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="10" id="wnM-ur-vCh"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
                 <outlet property="captionLabel" destination="LBC-sX-Cxv" id="aHC-FL-ksV"/>
+                <outlet property="commentButton" destination="9a9-r1-IeV" id="YXg-wD-I1m"/>
+                <outlet property="commentLabel" destination="H4F-iI-n48" id="TMD-Ox-EvL"/>
                 <outlet property="dateLabel" destination="H5e-qQ-Fuz" id="1db-Ac-Cp5"/>
                 <outlet property="likeButton" destination="Lec-pP-T0K" id="0yX-5k-7U4"/>
                 <outlet property="likeLabel" destination="Mk1-XW-MOw" id="iaN-RK-raj"/>
                 <outlet property="postImageView" destination="KBc-Mk-AJ6" id="yov-w1-a7X"/>
             </connections>
-            <point key="canvasLocation" x="384.5" y="589.5"/>
+            <point key="canvasLocation" x="380.5" y="615.5"/>
         </tableViewCell>
     </objects>
     <resources>
